# claude-code-release-cadence

./: .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: deploy-pages.yml  test.yml
accessibility-audit/: README.md  contrast-ratios.md  fixes.md
scripts/: bump-version.sh
src/claude_code_release_cadence/: __init__.py  __main__.py  compute.py  config.py  export.py  fetch.py  parse.py  render.py  tz.py
src/claude_code_release_cadence/templates/: chart-helpers.js  charts.js  colors.js  dashboard.css  dashboard.js  dashboard.template.html  heatmap.js  init.js  notes-overlay.js  stats.js  theme-init.js
templates/: dashboard.template.html
tests/: test_cli.py  test_compute.py  test_export.py  test_fetch.py  test_parse.py  test_render.py  test_tz.py
tests/fixtures/: sample-changelog.md  sample-npm-sizes.json  sample-npm-times.json
