# [Created with AI: Claude Code with Opus 4.6]

[project]
name = "claude-code-release-cadence"
version = "2026.03.02.1117"
description = "Analyze and visualize Claude Code's release cadence"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
claude-code-release-cadence = "claude_code_release_cadence.__main__:main"

[dependency-groups]
dev = ["pytest", "mypy", "ruff", "pre-commit"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_code_release_cadence"]

[tool.ruff]
src = ["src"]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
